--- a/index.html
+++ b/index.html
@@ -3,41 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <title>Xecution Designs</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <title>Webapp</title>
 </head>
 <body>
     
-    <div class="heading-title">
+    <header>
         <h1>Xecution Designs</h1>
-        <p>Game And App Development</p>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <div class="heading-container">
+        <h2>HOME</h2>
     </div>
 
-    <div class="navbar">
-        <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="contact.html">Contact</a>
-        <a href="games.html">Games</a>
-        <a href="apps.html">Apps</a>
-    </div>
+    <div class="container">
+        <section>
+            <h2>Xecution Designs</h2>
+            <h3>What we offer!</h3>
+            <p>We offer a range of services from game development to website development. We are a small company that is looking to expand into something bigger. We are currently looking for people to help us make games and websites. If you are interested in helping us then please contact us.</p>
 
-    <div class="section-1">
-        <img src="Images/Icon.png" alt="">
-        <h1>What I make:</h1>
-        <p>I am a solo developer who loves to make video games. I also love to make applications and websites but I am less experienced in this area and willing to learn.</p>
-        <br>
-        <p>I am working on making base deisgns of websites, applications and games for people - such as commissions.</p>
-        <br>
-        <p>If you would like to learn more about my commissions and costs please consider clicking the button below or contacting me via email or my socials which are available <a href="#">here</a>.</p>
+            <h2>A little thing about us...</h2>
+            <p>We dont use AI!!!</p>
+            <p>We try to avoid using AI as much as possible. The only reason we would ever use AI is to help format code already writen out or to help us brainstorm ideas. We try our best to avoid copy and pasting AI answers as that ruins the whole excitement of making something!</p>
+
+            <h2>WEBSITE UNDER DEVELOPMENT</h2>
+            <p>This website is not the fully completed version so we apologise in advance for any bugs or issues you may run into! If you have any suggestions then please go to the <a href="contact.html">contacts</a> page and email us what your thoughts are!</p>
+        </section>
     </div>
 
     <footer>
         <p>&copy; 2025 Xecution Designs</p>
-        <br>
-        <p>Contant me via email or socials given below (most socials are yet to be created.):</p>
-        <p>XecutionDesignsEnquiries@gmail.com</p>
-        <p>Instagram: @XecutionDesigns</p>
-        <p>Twitter: @XecutionDesigns</p>
     </footer>
 
 </body>
